--- a/index.html
+++ b/index.html
@@ -47,20 +47,21 @@
           </li>
 
           <li>
-            <div>
+            <div class="button_change">
               <a href="">Change</a>
+            </div>
           </li>
       </div>
       </ul>
       <div class="button_pay">
 
         Proceed to Payment
-  
+
       </div>
       <div class="button_cancel">
         <a href="">
-        Cancel Order
-      </a>
+          Cancel Order
+        </a>
       </div>
     </div class>
   </section>
