--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
 
   <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 </head>
 
 <body class="background_image">
@@ -24,18 +22,17 @@
     <div class="image-card">
       <img src="images/illustration-hero.svg" alt="">
     </div>
+
     <div class="grid-1 card">
       <h1 class="title">
         Order Summary
       </h1>
-
-
       <p class="text_inform">
         You can now listen to millions of songs, audiobooks, and podcasts on any
         device anywhere you like!
       </p>
-      <div class="mini_card">
 
+      <div class="mini_card">
         <ul>
           <li>
             <img src="/images/icon-music.svg" alt="" class="icon_music">
@@ -47,17 +44,15 @@
           </li>
 
           <li>
-            <div class="button_change">
+            <div>
               <a href="">Change</a>
-            </div>
           </li>
       </div>
-      </ul>
+
       <div class="button_pay">
-
         Proceed to Payment
-
       </div>
+
       <div class="button_cancel">
         <a href="">
           Cancel Order
@@ -68,8 +63,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Gab-Off</a>.
+    Coded by <a href="https://github.com/Gab-off">Gab-Off</a>.
   </div>
 </body>
-
 </html>
